add fields to user (stats)
